# tauri-plugin-native-audio

./: .gitignore  Cargo.toml  PUBLISHING.md  README.MD  build.rs
android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/app/tauri/nativeaudio/: NativeAudioPlugin.kt  NativeAudioService.kt
guest-js/: package.json
guest-js/dist-js/: index.d.ts  index.mjs
ios/: Package.swift
ios/Sources/: NativeAudioPlugin.swift
ios/Sources/AV/: PlayerAdapter.swift
ios/Sources/Core/: CheckpointStore.swift  NativeAudioModels.swift  PlaybackRuntimeActor.swift  PlaybackState.swift  SourceResolver.swift
ios/Sources/OS/: AudioSessionController.swift  NowPlayingController.swift  RemoteCommandController.swift
ios/Sources/Plugin/: NativeAudioPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: clear_progress_checkpoint.toml  dispose.toml  get_progress_checkpoint.toml  seek_to.toml  set_source.toml
permissions/schemas/: schema.json
src/: lib.rs
